--- a/BookStore2/Views/Shared/_Layout.cshtml
+++ b/BookStore2/Views/Shared/_Layout.cshtml
@@ -226,6 +226,16 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </p>
             </a>
           </li>
+
+                        <li class="nav-item">
+                            <a href="/Categories/Index" class="nav-link">
+                                <i class="nav-icon fas fa-th"></i>
+                                <p>
+                                    Categories
+                                    <span class="right badge badge-danger">New</span>
+                                </p>
+                            </a>
+                        </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
@@ -265,7 +275,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                             </div>
                             <div class="card-body w-100">
                                 @RenderBody()
-                                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                               
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                         </div>
