--- a/BookStore2/Views/Shared/_Layout.cshtml
+++ b/BookStore2/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <link rel="stylesheet" href="~/Dashboard/plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="~/Dashboard/dist/css/adminlte.min.css">
+    <link rel="stylesheet" href="~/Dashboard/dist/css/main.css">
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
@@ -228,11 +229,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </li>
 
                         <li class="nav-item">
-                            <a href="/Categories/Index" class="nav-link">
+                            <a asp-controller="Categories" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
                                     Categories
-                                    <span class="right badge badge-danger">New</span>
+                                   
                                 </p>
                             </a>
                         </li>
@@ -250,7 +251,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1 class="m-0">Starter Page</h1>
+            <h1 class="m-0">@RenderSection("Title")</h1>
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
@@ -270,14 +271,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <div class="row">
                         <div class="col-12">
                         <div class="card">
-                            <div class="card-header">
-                                <h5 class="m-0">Featured</h5>
+                            <div class="card-header d-flex justify-content-between align-item-center ">
+                                <h5 class="m-0">@RenderSection("SubTitle",false)</h5>
+                                @RenderSection("button",false)
                             </div>
-                            <div class="card-body w-100">
+                           
                                 @RenderBody()
-                               
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
+                             
+                            
                         </div>
                         </div>
       
