--- a/BookStore2/Views/Categories/Index.cshtml
+++ b/BookStore2/Views/Categories/Index.cshtml
@@ -15,12 +15,12 @@
 }
 else
 {
-     <div class="card-body w-100">
+     <div class="card-body  ">
 <table class="table table-bordered">
     <thead>
         <tr>
             <th style="width: 10px">#</th>
-            <th>Name</th
+            <th>Name</th>
                 <th>Actions</th>
           
         </tr>
@@ -31,7 +31,22 @@ else
                 <tr>
                     <td>@item.Id</td>
                     <td>@item.Name</td>
-                    <td><a asp-controller="Categories" asp-action="Edit" asp-route-id="@item.Id" >Edit</a></td>
+                    <td style="width:250px" >
+                        <a  class="btn btn-sm btn-primary asp-controller="Categories" asp-action="Edit" asp-route-id="@item.Id" >
+                            <i class="fas fa-edit"></i>
+                            Edit
+                            </a>
+                       <a class="btn btn-sm btn-info" asp-controller="Categories" asp-action="Details" asp-route-id="@item.Id" > 
+                           <i class="fas fa-info-circle"></i> Details
+                           </a>
+                     
+                           
+                           <a  class="btn btn-sm btn-danger js-delete "  href="#" data-id="@item.Id" > <i class="fas fa-trash-alt"></i> Delete</a>
+
+
+                    </td>
+                   
+                    
                 </tr>
             }
           
@@ -39,6 +54,61 @@ else
     </tbody>
 </table>
 </div>
+@section scripts{
+    <script>
+
+
+        document.querySelectorAll(".js-delete").forEach((btn) => { 
+        
+            btn.addEventListener("click", async () => {
+                //sweet alert code
+                Swal.fire({
+                    title: "Are you sure?",
+                    text: "You won't be able to revert this!",
+                    icon: "warning",
+                    showCancelButton: true,
+                    confirmButtonColor: "#3085d6",
+                    cancelButtonColor: "#d33",
+                    confirmButtonText: "Yes, delete it!"
+                }).then( async(result) => {
+                    if (result.isConfirmed) {
+                        //ال داتا ست بستخدمها لما اعرف custem attripute ولازم يكون اسمه data اوله
+                        const id = btn.dataset.id;
+                        // const id = btn.getAttribute("data-id")
+                        //console.log(id);
+                        const response = await fetch(`/Categories/Delete/${id}`, { method: 'POST' });
+                        if (response.ok) {
+                            btn.closest("tr").remove();
+                            const Toast = Swal.mixin({
+                                toast: true,
+                                position: 'Top-end',
+                               
+                                showConfirmButton: false,
+                                timer: 1500,
+                                timerProgressBar: true,
+                            })
+
+                            Toast.fire({
+                                icon: 'success',
+                                title: ' Category Deleted Successfully',
+                            })
+                        }
+                    }
+                });
+               
+
+            }) 
+        })
+
+   /* const elements=  document.querySelectorAll(".js-delete");
+
+        for (let i = 0; i < elements.length; i++) {
+            elements[i].addEventListener("click",()=>{
+                console.log("hi");
+            })
+        }*/
+    </script>
+}
 }
 
 
