--- a/BookStore2/Views/Shared/_Layout.cshtml
+++ b/BookStore2/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Theme style -->
   <link rel="stylesheet" href="~/Dashboard/dist/css/adminlte.min.css">
     <link rel="stylesheet" href="~/Dashboard/dist/css/main.css">
+    <link rel="stylesheet" href="~/Dashboard/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css">
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
@@ -229,7 +230,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </li>
 
                         <li class="nav-item">
-                            <a asp-controller="Categories" asp-action="Index" class="nav-link">
+                            <a asp-controller="Categories" asp-action="" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
                                     Categories
@@ -272,7 +273,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                         <div class="col-12">
                         <div class="card">
                             <div class="card-header d-flex justify-content-between align-item-center ">
-                                <h5 class="m-0">@RenderSection("SubTitle",false)</h5>
+                                <h5 class="m-0 text-blue">@RenderSection("SubTitle",false)</h5>
                                 @RenderSection("button",false)
                             </div>
                            
@@ -318,7 +319,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <script src="~/Dashboard/plugins/jquery/jquery.min.js"></script>
 <!-- Bootstrap 4 -->
     <script src="~/Dashboard/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/Dashboard/plugins/sweetalert2/sweetalert2.min.js"></script>
 <!-- AdminLTE App -->
     <script src="~/Dashboard/dist/js/adminlte.min.js"></script>
+    @RenderSection("scripts",false);
 </body>
 </html>
