--- a/BookStore2/Views/Shared/_Layout.cshtml
+++ b/BookStore2/Views/Shared/_Layout.cshtml
@@ -230,11 +230,28 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </li>
 
                         <li class="nav-item">
-                            <a asp-controller="Categories" asp-action="" class="nav-link">
+                            <a asp-controller="Categories" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
                                     Categories
                                    
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-controller="Authors" asp-action="Index" class="nav-link">
+                                <i class="nav-icon fas fa-th"></i>
+                                <p>
+                                    Authors
+
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-controller="Books" asp-action="Index" class="nav-link">
+                                <i class="nav-icon fas fa-th"></i>
+                                <p>
+                                   Book
                                 </p>
                             </a>
                         </li>
