--- a/BookStore2/Views/Authors/Index.cshtml
+++ b/BookStore2/Views/Authors/Index.cshtml
@@ -1,12 +1,15 @@
 ﻿@using BookStore2.ViewModel
-@model List<CategoryVM>
+@model List<AuthorVM>
+@section Title {
+Categories
+}
+@section SubTitle {
+Show
+}
 
-
-@section Title {Categories}
-@section SubTitle {Show}
 @section button{
 
-    <a asp-controller="Categories" asp-action="Create" class="btn btn-primary ">Create</a>
+    <a asp-controller="Authors" asp-action="Create" class="btn btn-primary ">Create</a>
 }
 @if (!Model.Any())
 {
@@ -35,12 +38,12 @@ else
                     <td>@item.Id</td>
                     <td>@item.Name</td>
                     <td style="width:250px" >
-                        <a  class="btn btn-sm btn-primary asp-controller="Categories" asp-action="Edit" asp-route-id="@item.Id" >
+                        <a  class="btn btn-sm btn-primary asp-controller="Authors" asp-action="Edit" asp-route-id="@item.Id" >
                             <i class="fas fa-edit"></i>
                             Edit
                             </a>
-                       <a class="btn btn-sm btn-info" asp-controller="Categories" asp-action="Details" asp-route-id="@item.Id" > 
-                           <i class="fas fa-info-circle"></i> Details
+                            <a class="btn btn-sm btn-info" asp-controller="Authors" asp-action="Details" asp-route-id="@item.Id">
+                                <i class="fas fa-info-circle"></i> Details
                            </a>
                      
                            
@@ -58,12 +61,11 @@ else
 </table>
 </div>
 }
-@section scripts{
+@section scripts {
     <script>
 
+        document.querySelectorAll(".js-delete").forEach((btn) => {
 
-        document.querySelectorAll(".js-delete").forEach((btn) => { 
-        
             btn.addEventListener("click", async () => {
                 //sweet alert code
                 Swal.fire({
@@ -74,19 +76,19 @@ else
                     confirmButtonColor: "#3085d6",
                     cancelButtonColor: "#d33",
                     confirmButtonText: "Yes, delete it!"
-                }).then( async(result) => {
+                }).then(async (result) => {
                     if (result.isConfirmed) {
                         //ال داتا ست بستخدمها لما اعرف custem attripute ولازم يكون اسمه data اوله
                         const id = btn.dataset.id;
                         // const id = btn.getAttribute("data-id")
                         //console.log(id);
-                        const response = await fetch(`/Categories/Delete/${id}`, { method: 'POST' });
+                        const response = await fetch(`/Authors/Delete/${id}`, { method: 'POST' });
                         if (response.ok) {
                             btn.closest("tr").remove();
                             const Toast = Swal.mixin({
                                 toast: true,
                                 position: 'Top-end',
-                               
+
                                 showConfirmButton: false,
                                 timer: 1500,
                                 timerProgressBar: true,
@@ -100,21 +102,17 @@ else
                         }
                     }
                 });
-               
 
-            }) 
+
+            })
         })
 
-   /* const elements=  document.querySelectorAll(".js-delete");
+        /* const elements=  document.querySelectorAll(".js-delete");
 
-        for (let i = 0; i < elements.length; i++) {
-            elements[i].addEventListener("click",()=>{
-                console.log("hi");
-            })
-        }*/
+             for (let i = 0; i < elements.length; i++) {
+                 elements[i].addEventListener("click",()=>{
+                     console.log("hi");
+                 })
+             }*/
     </script>
 }
-
-
-
-    
