--- a/BookStore2/Views/Categories/Index.cshtml
+++ b/BookStore2/Views/Categories/Index.cshtml
@@ -19,7 +19,12 @@
 else
 {
      <div class="card-body  ">
-<table class="table table-bordered">
+        <div class="alert alert-danger alert-dismissible js-alert" hidden>
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h5><i class="icon fas fa-ban"></i> Alert!</h5>
+            No data
+        </div>
+        <table class="table table-bordered js-table">
     <thead>
         <tr>
             <th style="width: 10px">#</th>
@@ -82,6 +87,12 @@ else
                         //console.log(id);
                         const response = await fetch(`/Categories/Delete/${id}`, { method: 'POST' });
                         if (response.ok) {
+
+                            if (document.querySelectorAll(".js-delete").length == 1) {
+                                document.querySelector(".js-table").setAttribute("hidden", "")
+                                document.querySelector(".js-alert").removeAttribute("hidden")
+                            }
+
                             btn.closest("tr").remove();
                             const Toast = Swal.mixin({
                                 toast: true,
