--- a/BookStore2/Views/Shared/_Layout.cshtml
+++ b/BookStore2/Views/Shared/_Layout.cshtml
@@ -175,7 +175,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
           <img src="~/Dashboard/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
-          <a href="#" class="d-block">Alexander Pierce</a>
+          <a href="#" class="d-block">@User.Identity.Name</a>
         </div>
       </div>
 
@@ -228,7 +228,28 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </p>
             </a>
           </li>
+                        <li class="nav-item">
+                            <a asp-controller="Role" asp-action="Index" class="nav-link">
+                                <i class="nav-icon fas fa-th"></i>
+                                <p>
+                                   Rols
 
+                                </p>
+                            </a>
+                        </li>
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a asp-controller="Users" asp-action="Index" class="nav-link">
+                                    <i class="nav-icon fas fa-th"></i>
+                                    <p>
+                                        Users
+
+                                    </p>
+                                </a>
+                            </li>
+                        }
+                     
                         <li class="nav-item">
                             <a asp-controller="Categories" asp-action="Index" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
@@ -255,6 +276,18 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                 </p>
                             </a>
                         </li>
+
+                        <li class="nav-item">
+                            <a asp-controller="Books" asp-action="Index" class="nav-link d-flex">
+                                
+
+                                <i class="nav-icon fas fa-th"></i>
+                                
+                                <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                                    <button type="submit" class="nav-link btn btn-link ">Click here to Logout</button>
+                                </form>
+                            </a>
+                        </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
@@ -269,7 +302,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1 class="m-0">@RenderSection("Title")</h1>
+            <h1 class="m-0">@RenderSection("Title",false)</h1>
           </div><!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
